<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="160dp"
    android:layout_height="260dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    android:layout_margin="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txtTitleCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/vTitle"
            android:textAllCaps="true"
            android:textSize="24dp" />


        <TextView
            android:id="@+id/txtDesCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/vDesc" />

        <Button
            android:id="@+id/btnVerMasC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/verMasBTN"
            android:background="#00000000"
            android:padding="10dp"
            android:textColor="@color/linkColor"
            android:fontFamily="@font/montserrat_semi_bold"
            android:layout_alignParentBottom="true"/>


    </LinearLayout>



</androidx.cardview.widget.CardView>