<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.VerificacionOTP"
    android:background="@color/white"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical"
        >


        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:padding="5dp"
            />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verificacionOne"
            android:textSize="40sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/secondary"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:layout_marginTop="130dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verificacionTwo"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:layout_gravity="center"
            />

        <com.chaos.view.PinView
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="5"
            app:itemWidth="50dp"
            app:itemHeight="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            app:lineColor="@color/secondary"
            android:itemBackground="@color/terciary"
            style="@style/PinWidget.PinView"
            android:inputType="number"
            android:cursorVisible="true"
            app:cursorColor="@color/secondary"
            app:hideLineWhenFilled="true"
            app:itemRadius="10dp"
            />


        <Button
            android:id="@+id/btnNextTwo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/nextBtn"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/generalBtnColor"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="40dp"/>


    </LinearLayout>


</ScrollView>