<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.OlvidarContrasena"
    android:padding="30dp"
    android:background="@color/white"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:padding="5dp"
            android:clickable="true"
            />
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rpassword"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/secondary"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rpassword_detail"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_medium"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtCorreoRecuperar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:hint="Ingresa tu e-mail"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:startIconDrawable="@drawable/ic_mail_1"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconTint="#000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtRecuperarCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/btnNextOne"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/nextBtn"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/generalBtnColor"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="50dp"/>

    </LinearLayout>



</ScrollView>