<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CambiarContrasena"
    android:background="@color/white"
    android:padding="30dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/btnBackThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_lock"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            />


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newCredentials"
            android:textSize="40sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/secondary"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newCredentialsDesc"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:layout_gravity="center"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayoutPass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="Nueva contraseña"
            app:passwordToggleEnabled="true"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:startIconDrawable="@drawable/ic_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconTint="#000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNuevaContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLayoutPassConfirm"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="Confirma tu contraseña"
            app:passwordToggleEnabled="true"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:startIconDrawable="@drawable/ic_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconTint="#000">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtCNuevaContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/btnLoginFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMNext"
            android:drawableLeft="@drawable/ic_verify"
            android:backgroundTint="@color/generalBtnColor"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_semi_bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

</ScrollView>